[gd_scene load_steps=17 format=2]

[ext_resource path="res://Materials/Free/Main Characters/Ninja Frog/Jump (32x32).png" type="Texture" id=1]
[ext_resource path="res://Materials/Free/Main Characters/Mask Dude/Jump (32x32).png" type="Texture" id=2]
[ext_resource path="res://Materials/Free/Main Characters/Pink Man/Jump (32x32).png" type="Texture" id=3]
[ext_resource path="res://Materials/Free/Main Characters/Virtual Guy/Jump (32x32).png" type="Texture" id=4]
[ext_resource path="res://fonts/compass-pro-v1.1/CompassPro.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Screens/CharacterSelectionScreen.gd" type="Script" id=6]
[ext_resource path="res://Materials/Free/Menu/Buttons/Play_1.png" type="Texture" id=7]
[ext_resource path="res://Materials/Free/Menu/Buttons/Play_1 pressed.png" type="Texture" id=8]
[ext_resource path="res://Materials/Free/Menu/Buttons/Play_4.png" type="Texture" id=9]
[ext_resource path="res://Materials/Free/Menu/Buttons/Play_2.png" type="Texture" id=10]
[ext_resource path="res://Materials/Free/Menu/Buttons/Play_3.png" type="Texture" id=11]
[ext_resource path="res://Materials/Free/Menu/Buttons/Play_2 pressed.png" type="Texture" id=12]
[ext_resource path="res://Materials/Free/Menu/Buttons/Play_4 pressed.png" type="Texture" id=13]
[ext_resource path="res://Materials/Free/Menu/Buttons/Play_3 pressed.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 5 )

[node name="CharacterSelectionScreen" type="Node2D"]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.509804, 0.796078, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = -124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 206.0
margin_bottom = 468.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/Player1"]
margin_right = 206.0
margin_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/Player1"]
margin_top = 185.0
margin_right = 206.0
margin_bottom = 281.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "A - left
D - right
W - jump"
align = 1
autowrap = true

[node name="Button1" type="TextureButton" parent="CanvasLayer/VBoxContainer/Player1"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 314.0
margin_right = 206.0
margin_bottom = 468.0
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buffer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_left = 210.0
margin_right = 260.0
margin_bottom = 468.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 3

[node name="Player2" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_left = 264.0
margin_right = 471.0
margin_bottom = 468.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/Player2"]
margin_right = 207.0
margin_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/Player2"]
margin_top = 185.0
margin_right = 207.0
margin_bottom = 281.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "J - left
I - right
L - jump"
align = 1
autowrap = true

[node name="Button2" type="TextureButton" parent="CanvasLayer/VBoxContainer/Player2"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 314.0
margin_right = 207.0
margin_bottom = 468.0
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 10 )
expand = true

[node name="Buffer2" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_left = 475.0
margin_right = 525.0
margin_bottom = 468.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 3

[node name="Player3" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_left = 529.0
margin_right = 735.0
margin_bottom = 468.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/Player3"]
margin_right = 206.0
margin_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/Player3"]
margin_top = 185.0
margin_right = 206.0
margin_bottom = 281.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "<-  - left
->  - right
^ - jump"
align = 1
autowrap = true

[node name="Button3" type="TextureButton" parent="CanvasLayer/VBoxContainer/Player3"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 314.0
margin_right = 206.0
margin_bottom = 468.0
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 11 )
expand = true

[node name="Buffer3" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_left = 739.0
margin_right = 789.0
margin_bottom = 468.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 3

[node name="Player4" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_left = 793.0
margin_right = 1000.0
margin_bottom = 468.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/Player4"]
margin_right = 207.0
margin_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/Player4"]
margin_top = 185.0
margin_right = 207.0
margin_bottom = 281.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "a - left
d - right
w - jump"
align = 1
autowrap = true

[node name="Button4" type="TextureButton" parent="CanvasLayer/VBoxContainer/Player4"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 314.0
margin_right = 207.0
margin_bottom = 468.0
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 9 )
expand = true

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 404.0
margin_top = 504.0
margin_right = 604.0
margin_bottom = 604.0
custom_fonts/font = SubResource( 2 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="CanvasLayer/VBoxContainer/Player1/Button1" to="." method="_on_Button1_toggled"]
[connection signal="toggled" from="CanvasLayer/VBoxContainer/Player2/Button2" to="." method="_on_Button2_toggled"]
[connection signal="toggled" from="CanvasLayer/VBoxContainer/Player3/Button3" to="." method="_on_Button3_toggled"]
[connection signal="toggled" from="CanvasLayer/VBoxContainer/Player4/Button4" to="." method="_on_Button4_toggled"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
